--- a/src/main/resources/templates/userTemplate/dashboard.html
+++ b/src/main/resources/templates/userTemplate/dashboard.html
@@ -12,7 +12,7 @@
             <div th:if="${LoggedInUser}">
                 <div data-th-replace="~{userTemplate/sideBar :: user-sidebar}"></div>
             </div>
-            <div class="pl-64">
+            <div class="sm:pl-64 pt-20" style="height: 1000px">
                 <div class="flex justify-center flex-col items-center ">
                     <h1 class="text-5xl mb-3"> This is a DashBoard Page </h1>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae
