--- a/src/main/resources/templates/userTemplate/user_navbar.html
+++ b/src/main/resources/templates/userTemplate/user_navbar.html
@@ -1,5 +1,5 @@
 <nav data-th-fragment="user-navbar"
-    class="bg-white dark:bg-gray-900 pl-64 fixed w-full z-20 top-0 start-0 border-b border-gray-200 dark:border-gray-600">
+    class="bg-white border-gray-900 shadow-sm dark:bg-gray-900 pl-64 fixed w-full top-0 left-0 right-0 ">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
         <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
             <img data-th-src="@{/images/scm.png}" class="h-8" alt="Flowbite Logo">
