--- a/src/main/resources/templates/userTemplate/addContact.html
+++ b/src/main/resources/templates/userTemplate/addContact.html
@@ -31,28 +31,22 @@
                             <div class="form mt-4">
 
                                 <!-- Enter Email -->
-                                <label for="input-group-1"
+                                <label for="email"
                                     class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Enter
                                     Email</label>
                                 <div class="relative mb-6">
                                     <div
                                         class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
-                                        <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true"
-                                            xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 16">
-                                            <path
-                                                d="m10.036 8.278 9.258-7.79A1.979 1.979 0 0 0 18 0H2A1.987 1.987 0 0 0 .641.541l9.395 7.737Z" />
-                                            <path
-                                                d="M11.241 9.817c-.36.275-.801.425-1.255.427-.428 0-.845-.138-1.187-.395L0 2.6V14a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V2.5l-8.759 7.317Z" />
-                                        </svg>
+                                        <i class="fa-solid fa-envelope"></i>
                                     </div>
-                                    <input type="text" id="input-group-1"
+                                    <input type="text" id="email"
                                         class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                                         placeholder="name@flowbite.com">
                                 </div>
 
                                 <!-- Name feild  -->
 
-                                <label for="input-group-1"
+                                <label for="name"
                                     class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Enter
                                     Name</label>
                                 <div class="relative mb-6">
@@ -60,14 +54,14 @@
                                         class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
                                         <i class="fa-regular fa-user"></i>
                                     </div>
-                                    <input type="text" id="input-group-1"
+                                    <input type="text" id="name"
                                         class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                                         placeholder="Enter The Name">
                                 </div>
 
                                 <!-- phone no  -->
 
-                                <label for="input-group-1"
+                                <label for="phoneNumber"
                                     class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Enter
                                     Phone no.</label>
                                 <div class="relative mb-6">
@@ -75,7 +69,7 @@
                                         class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
                                         <i class="fa-solid fa-phone"></i>
                                     </div>
-                                    <input type="text" id="input-group-1"
+                                    <input type="text" id="phoneNumber"
                                         class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                                         placeholder="+91-xxxxxxxxxx">
                                 </div>
@@ -84,17 +78,25 @@
                                 <!-- Address feild  -->
 
 
-                                <label for="message"
+                                <label for="address"
                                     class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Contact
                                     Address</label>
-                                <textarea id="message" rows="4"
+                                <textarea id="address" rows="4"
+                                    class="mb-3 block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                                    placeholder="Write your thoughts here..."></textarea>
+
+                                <!--  Desciption of contact  -->
+
+                                <label for="discription"
+                                    class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Descirption</label>
+                                <textarea id="discription" rows="4"
                                     class="mb-3 block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                                     placeholder="Write your thoughts here..."></textarea>
 
 
                                 <!-- Enter the picture feild  -->
 
-                                <label for="input-group-1"
+                                <label for="pictures"
                                     class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Enter
                                     the profile picture Link </label>
                                 <div class="relative mb-6">
@@ -102,9 +104,39 @@
                                         class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
                                         <i class="fa-solid fa-user-doctor"></i>
                                     </div>
-                                    <input type="text" id="input-group-1"
+                                    <input type="text" id="pictures"
                                         class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                                         placeholder="Profile URL ">
+                                </div>
+
+
+                                <!-- column for websites  -->
+
+                                <div class="links flex" style="display: flex; gap: 40px;">
+
+                                    <!--Website Url -->
+                                    <div class="relative mb-6 ">
+                                        <div
+                                            class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
+                                            <i class="fa-solid fa-globe"></i>
+                                        </div>
+                                        <input type="text" id="website"
+                                            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                                            placeholder="Enter Website URL">
+                                    </div>
+                                     
+
+                                     <!-- Linkedin URL -->
+                                    <div class="relative mb-6 ">
+                                        <div
+                                            class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
+                                            <i class="fa-brands fa-linkedin"></i>
+                                        </div>
+                                        <input type="text" id="Linkedin"
+                                            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                                            placeholder="Enter Linkedin URl">
+                                    </div>
+
                                 </div>
 
 
