--- a/src/main/resources/templates/userTemplate/addContact.html
+++ b/src/main/resources/templates/userTemplate/addContact.html
@@ -12,7 +12,7 @@
             <div th:if="${LoggedInUser}">
                 <div data-th-replace="~{userTemplate/sideBar :: user-sidebar}"></div>
             </div>
-            <div class="pl-64 pt-20" style="height: 1000px">
+            <div class="pl-64 pt-15" style="height: 1000px">
                 <div class=" grid grid-cols-12 ">
                     <div class="col-span-3"></div>
                     <div class="col-span-12 md:col-span-6">
@@ -28,121 +28,143 @@
 
                             <!-- my form  -->
 
-                            <div class="form mt-4">
+                            <form data-th-action="@{'addContact'}"  method="post" enctype="multipart/form-data"
+                                data-th-object="${contactForm}">
 
-                                <!-- Enter Email -->
-                                <label for="email"
-                                    class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Enter
-                                    Email</label>
-                                <div class="relative mb-6">
-                                    <div
-                                        class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
-                                        <i class="fa-solid fa-envelope"></i>
-                                    </div>
-                                    <input type="text" id="email"
-                                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                                        placeholder="name@flowbite.com">
-                                </div>
+                                <div class="form mt-4">
 
-                                <!-- Name feild  -->
-
-                                <label for="name"
-                                    class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Enter
-                                    Name</label>
-                                <div class="relative mb-6">
-                                    <div
-                                        class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
-                                        <i class="fa-regular fa-user"></i>
-                                    </div>
-                                    <input type="text" id="name"
-                                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                                        placeholder="Enter The Name">
-                                </div>
-
-                                <!-- phone no  -->
-
-                                <label for="phoneNumber"
-                                    class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Enter
-                                    Phone no.</label>
-                                <div class="relative mb-6">
-                                    <div
-                                        class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
-                                        <i class="fa-solid fa-phone"></i>
-                                    </div>
-                                    <input type="text" id="phoneNumber"
-                                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                                        placeholder="+91-xxxxxxxxxx">
-                                </div>
-
-
-                                <!-- Address feild  -->
-
-
-                                <label for="address"
-                                    class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Contact
-                                    Address</label>
-                                <textarea id="address" rows="4"
-                                    class="mb-3 block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                                    placeholder="Write your thoughts here..."></textarea>
-
-                                <!--  Desciption of contact  -->
-
-                                <label for="discription"
-                                    class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Descirption</label>
-                                <textarea id="discription" rows="4"
-                                    class="mb-3 block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                                    placeholder="Write your thoughts here..."></textarea>
-
-
-                                <!-- Enter the picture feild  -->
-
-                                <label for="pictures"
-                                    class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Enter
-                                    the profile picture Link </label>
-                                <div class="relative mb-6">
-                                    <div
-                                        class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
-                                        <i class="fa-solid fa-user-doctor"></i>
-                                    </div>
-                                    <input type="text" id="pictures"
-                                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                                        placeholder="Profile URL ">
-                                </div>
-
-
-                                <!-- column for websites  -->
-
-                                <div class="links flex" style="display: flex; gap: 40px;">
-
-                                    <!--Website Url -->
-                                    <div class="relative mb-6 ">
+                                    <!-- Enter Email -->
+                                    <label for="email"
+                                        class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Enter
+                                        Email</label>
+                                    <div class="relative mb-6">
                                         <div
                                             class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
-                                            <i class="fa-solid fa-globe"></i>
+                                            <i class="fa-solid fa-envelope"></i>
                                         </div>
-                                        <input type="text" id="website"
+                                        <input type="text" th:field="*{email}"
                                             class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                                            placeholder="Enter Website URL">
+                                            placeholder="name@flowbite.com">
                                     </div>
-                                     
 
-                                     <!-- Linkedin URL -->
-                                    <div class="relative mb-6 ">
+                                    <!-- Name feild  -->
+
+                                    <label for="name"
+                                        class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Enter
+                                        Name</label>
+                                    <div class="relative mb-6">
                                         <div
                                             class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
-                                            <i class="fa-brands fa-linkedin"></i>
+                                            <i class="fa-regular fa-user"></i>
                                         </div>
-                                        <input type="text" id="Linkedin"
+                                        <input type="text" th:field="*{name}"
                                             class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                                            placeholder="Enter Linkedin URl">
+                                            placeholder="Enter The Name">
                                     </div>
+
+                                    <!-- phone no  -->
+
+                                    <label for="phoneNumber"
+                                        class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Enter
+                                        Phone no.</label>
+                                    <div class="relative mb-6">
+                                        <div
+                                            class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
+                                            <i class="fa-solid fa-phone"></i>
+                                        </div>
+                                        <input type="text" th:field="*{phoneNumber}"
+                                            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                                            placeholder="+91-xxxxxxxxxx">
+                                    </div>
+
+
+                                    <!-- Address feild  -->
+
+
+                                    <label for="address"
+                                        class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Contact
+                                        Address</label>
+                                    <textarea rows="4" th:field="*{address}"
+                                        class="mb-3 block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                                        placeholder="Write your thoughts here..."></textarea>
+
+                                    <!--  Desciption of contact  -->
+
+                                    <label for="discirption"
+                                        class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Descirption</label>
+                                    <textarea rows="4" th:field="*{discription}"
+                                        class="mb-3 block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                                        placeholder="Write your thoughts here..."></textarea>
+
+
+                                    <!-- column for websites  -->
+
+                                    <div class="links flex mb-4" style="display: flex; gap: 40px;">
+
+                                        <!--Website Url -->
+                                        <div class="relative  ">
+                                            <div
+                                                class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
+                                                <i class="fa-solid fa-globe"></i>
+                                            </div>
+                                            <input type="text" th:field="*{website}"
+                                                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                                                placeholder="Enter Website URL">
+                                        </div>
+
+
+                                        <!-- Linkedin URL -->
+                                        <div class="relative  ">
+                                            <div
+                                                class="absolute inset-y-0 start-0 flex items-center ps-3.5 pointer-events-none">
+                                                <i class="fa-brands fa-linkedin"></i>
+                                            </div>
+                                            <input type="text" data-th-field="*{Linkedin}"
+                                                class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                                                placeholder="Enter Linkedin URl">
+                                        </div>
+
+                                    </div>
+
+                                    <!-- Enter the picture feild  -->
+
+
+                                    <label class="block mb-4 text-sm font-medium text-gray-900 dark:text-white"
+                                        for="file_input">Upload Contact Pic</label>
+                                    <input
+                                        class="block w-full text-sm text-gray-900 border border-gray-300 rounded-lg cursor-pointer bg-gray-50 dark:text-gray-400 focus:outline-none dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400"
+                                        type="file" th:field="*{picture}">
+
+
+
+
+                                    <!-- checkbox  -->
+
+                                    <div class="flex items-center mb-5 mt-3">
+                                        <input  type="checkbox" data-th-field="*{favorite}"
+                                            value=""
+                                            class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+                                        <label for="default-checkbox"
+                                            class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">Is this
+                                            contact is your faviourte one ?</label>
+                                    </div>
+
+
+                                    <!-- submit button  -->
+                                    <div class="flex justify-center">
+                                        <button type="submit"
+                                            class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Add
+                                            Contact</button>
+
+                                        <button type="reset"
+                                            class="text-white bg-red-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Reset</button>
+                                    </div>
+
+
 
                                 </div>
 
-
-
-
-                            </div>
+                            </form>
                         </div>
                     </div>
 
