--- a/src/main/resources/templates/userTemplate/sideBar.html
+++ b/src/main/resources/templates/userTemplate/sideBar.html
@@ -47,7 +47,7 @@
                 </a>
             </li>
             <li>
-                <a data-th-href="@{'/Contact/addContact'}"
+                <a data-th-href="@{'Contact/addContact'}"
                     class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
 
 
