--- a/src/main/resources/templates/userTemplate/sideBar.html
+++ b/src/main/resources/templates/userTemplate/sideBar.html
@@ -37,6 +37,7 @@
                     <span class="ms-3">Dashboard</span>
                 </a>
             </li>
+
             <li>
                 <a data-th-href="@{'/User/Profile'}"
                     class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
@@ -46,27 +47,27 @@
                         class="inline-flex items-center justify-center px-2 ms-3 text-sm font-medium text-green-800 bg-gray-100 rounded-full dark:bg-gray-700 dark:text-gray-300">Manage</span>
                 </a>
             </li>
+
             <li>
-                <a data-th-href="@{'Contact/addContact'}"
+                <a data-th-href="@{'/User/addContact'}"
                     class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
-
-
-
                     <i class="fa-solid fa-plus"></i>
                     <span class="flex-1 ms-3 whitespace-nowrap">Add Contact </span>
                     <span
                         class="inline-flex items-center justify-center w-3 h-3 p-3 ms-3 text-sm font-medium text-blue-800 bg-blue-100 rounded-full dark:bg-blue-900 dark:text-blue-300">3</span>
                 </a>
             </li>
+
             <li>
-                <a href="#"
+                <a data-th-href="@{'/User/AllContact'}"
                     class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
                     <i class="fa-solid fa-address-book"></i>
-                    <span class="flex-1 ms-3 whitespace-nowrap">Contacts</span>
+                    <span class="flex-1 ms-3 whitespace-nowrap">All Your Contacts</span>
                 </a>
             </li>
+
             <li>
-                <a data-th-href="@{'Contact/editContact'}"
+                <a data-th-href="@{'/User/editContact'}"
                     class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
                     <i class="fa-solid fa-pen-to-square"></i>
                     <span class="flex-1 ms-3 whitespace-nowrap">Edit Contact </span>
