--- a/src/main/resources/templates/userTemplate/allContact.html
+++ b/src/main/resources/templates/userTemplate/allContact.html
@@ -21,12 +21,17 @@
 
 
                         <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
+                            <form data-th-action="@{/User/search}" method="get">
+
+                            
                             <div
                                 class="flex space-x-3 items-center justify-start flex-column flex-wrap md:flex-row space-y-4 md:space-y-0 pb-4 bg-white dark:bg-gray-900">
                                 
                     
                                     <div>
-                                    <select  id="countries_disabled"
+                                    <select 
+                                    name="field"
+                                     id="countries_disabled"
                                         class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
                                         <option selected>Select Field</option>
                                         <option value="Name">Name</option>
@@ -45,13 +50,15 @@
                                                     d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z" />
                                             </svg>
                                         </div>
-                                        <input type="text" id="table-search-users"
+                                        <input 
+                                        name="keyword"
+                                        type="text" id="table-search-users"
                                             class="block p-2 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg w-80 bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                                             placeholder="Search for users">
                                     </div>
-                                    <button class="px-3 py-2 bg-gray-800 text-white rounded-md"> Search </button>
+                                    <button type="submit" class="px-3 py-2 bg-gray-800 text-white rounded-md"> Search </button>
                                 </div>
-                            
+                            </form>
 
                             <!-- Table logic is here of all contacts page  -->
                             <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
