--- a/src/main/resources/templates/userTemplate/profile.html
+++ b/src/main/resources/templates/userTemplate/profile.html
@@ -23,7 +23,7 @@
                         <div class="flex flex-col">
                             <h1 class="text-3xl font-bold text-gray-800 mb-2" data-th-text="${user.name}">John Doe</h1>
                             <p class="text-lg text-gray-600 mb-2">Email: <span data-th-text="${user.email}">johndoe@example.com</span></p>
-                            <p class="text-lg text-gray-600">Phone: <span data-th-text="${user.Number}">+1 234 567 890</span></p>
+                            <p class="text-lg text-gray-600">Phone: <span data-th-text="${user.number}">+1 234 567 890</span></p>
                         </div>
                     </div>
         
